[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "RichConsole"
description = "A library to output rich text into console"
readme = "ReadMe.md"
requires-python = ">=3.4"
authors = [{ name = "KOLANICH" }]
keywords = ["color", "ANSI", "rich text", "formatting"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	#"License :: Public Domain :: Unlicense",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Text Processing",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-libs/RichConsole.py"

[project.optional-dependencies]
colorama = [
	"colorama", # @ git+https://github.com/tartley/colorama.git
]
plumbum = [
	"plumbum", # @ git+https://github.com/tomerfiliba/plumbum.git
]
colored = [
	"colored", @ git+https://gitlab.com/dslackw/colored.git
]

[tool.setuptools_scm]

[tool.setuptools]
zip-safe = true
py-modules = ["RichConsole"]
